# smefit_release

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  CNAME  InvarsFit_Fitmaker_Model_21_Mass_1_Tree.py  InvarsFit_Fitmaker_Model_22_Mass_1_Tree.py  InvarsFit_Fitmaker_Model_41_Mass_1_Tree.py  InvarsFit_Fitmaker_Model_43_Mass_1_Tree.py  InvarsFit_Fitmaker_Model_48_Mass_1_Tree.py  InvarsFit_Fitmaker_Model_49_Mass_1_Tree.py  InvarsFit_Fitmaker_Model_50_Mass_1_Tree.py  InvarsFit_Fitmaker_Model_5_Mass_1_Tree.py  README.md  doc_requirements.txt  environment.yml  genindex.html  index.html  install.sh  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  smefit_runner.py  translate_commondata.py  translate_table.py  zzz-refs.html
.github/: CODE_OF_CONDUCT.md  codecov.yml  deploy.yml
.github/workflows/: black.yml  deploy.yml  docs.yml  pre-commit.yml  unittests.yml
POLYTEST/: POLYTEST.yaml  posterior.json
Polymode_tests/: report_poly.yaml
Polymode_tests/Generic_test/: poly.json  poly.yaml  poly2.json  readme.md
Polymode_tests/POLYTEST/: POLYTEST.yaml  posterior.json
Polymode_tests/Polynomial_test/: poly.json  poly.yaml  poly2.yaml  readme.md  test_poly_quartic.yaml
_modules/: index.html
_modules/smefit/: analyze.html  basis_rotation.html  chi2.html  coefficients.html  compute_theory.html  covmat.html  fit_manager.html  loader.html  log.html  optimize.html  postfit.html  prefit.html  projections.html  rge.html  runner.html
_sources/: index.rst.txt
_sources/data_theory/: covariance.rst.txt  data.md  data.md.txt  projections.rst  theory.rst  theory.rst.txt
_sources/development/: code_todos.rst.txt
_sources/fit_report/: code_struct.md.txt  code_struct.rst.txt  report_func.rst.txt
_sources/fitting_code/: code_struct.md  running.md  running.md.txt  tutorial.ipynb  tutorial.ipynb.txt
_sources/implementation/: NS.rst.txt
_sources/people/: people.rst
_sources/previous_releases/: smefit20.rst.txt  smefit_rw.rst  smefit_vbs.rst
_sources/report/: links.rst  links.rst.txt  running.md  running.md.txt  tools.rst.txt
_sources/reports/: reports.rst.txt
_sources/theory/: MCFit.rst  MCFit.rst.txt  NS.rst  NS.rst.txt  SMEFT.rst.txt  general.rst
_sources/tutorial/: example.md.txt
_static/: documentation_options.js
_static/report_STXS_2020/: index.html
_static/report_STXS_LHC_2020/: index.html
_static/report_smefit20_linear/: index.css  index.html
_static/report_smefit20_quad/: index.html
add_optimal_chi2/: README.md  interface_oos.py  interface_oos_tt.py
benchmarks/: closure_test.py  profile_ns.py
benchmarks/closure_tests/: A_smefit_hllhc_only_glob_NLO_NHO.yaml  closure_test.py  run_closure.yaml  run_projection.yaml
commondata/: STXS_2020.yaml  STXS_2020_public.yaml  STXS_2020_public_final.yaml
commondata/meta/: ATLAS_STXS_2020.yaml
conda_bld/: environment_linux.yml  environment_osx.yml  generate_conda_lock.sh
conda_bld/smefit/: build.sh  meta.yaml
data_theory/: covariance.html  data.html  decomposition_cov.html  projections.html  rotation.html  theory.html
development/: code_todos.html
docs/: .gitignore  Makefile  generate_code_todos.py
docs/source/: conf.py  index.rst  refs.bib  zzz-refs.rst
esppu/: quadruplets.py  quadruplets_all.py  quadruplets_non_cus.py
fit_report/: code_struct.html  report_func.html  rotation.html
fitting_code/: code_struct.html  running.html  tutorial.html  tutorial.ipynb
implementation/: MCFit.html  NS.html  general.html
modules/smefit/: smefit.analyze.html  smefit.cli.html  smefit.html  smefit.optimize.html  smefit.postfit.html  smefit.prefit.html  smefit.projections.html  smefit.rge.html
people/: people.html
previous_releases/: smefit20.html  smefit30.html  smefit_rw.html  smefit_top.html  smefit_uv.html  smefit_vbs.html
report/: links.html  running.html  tools.html
reports/: reports.html
rotations/: STXS_PUB_rot.json  fitbasis_28_pars.json
runcards/: base_runcard.yaml  projections.yaml  test_runcard.yaml
runcards/analyze/: test_runcard.yaml  test_runcard_closure_lines.yaml
runcards/external_likelihood/: runcard_smelli.yaml
runcards/ml4eft/: NS_run_card_zhllbb.json  ml_observables.py  (+1 more)
self-coupling-esppu-smefit/: smefit_trilinear_bounds.py
smefit_flavour/: EOSLikelihood.py  flavour_likelihoods.py  mock_interface.py  run_fit.py  smefit_runcard.yaml
smefit_uv/: fcc_bounds.py  histogram_tools.py  latex_dicts.py  spider_uv.py
smefit_uv_test/: fcc_bounds.py  fisher_test.py  fisher_test_2.py  fitmaker_comparison.py  granada_bounds.py  histogram_tools.py  latex_dicts.py  marg_inv.py  tree_vs_loop.py  utils.py
tests/: base_runcard.yaml  test_chi2_utils.py  test_cli_analytic_fit.py  test_cli_proj.py  test_cli_scan.py  test_cli_ultranest_fit.py  test_coefficients.py  test_compute_theory.py  test_covariance.py  test_external_chi2.py  test_fisher.py  test_loader.py  test_optimize.py  test_pca.py  test_runcard.yaml  test_runner.py  test_utils.py
theory/: ATLAS_STXS_2020.json  ATLAS_STXS_2020.txt  Analytic.html  MCFit.html  NS.html  SMEFT.html  STXS_2020.json  STXS_2020_public.json  STXS_2020_public_final.json  general.html
tutorial/: example.html  install.sh  runcard_asy.yaml  runcard_combined.yaml  runcard_higgs.yaml  runcard_report.yaml  runcard_report_asy.yaml  runcard_report_combined.yaml  runcard_report_higgs.yaml  runcard_report_sym.yaml  runcard_report_ttZ.yaml  runcard_report_ttZ_higgs.yaml  runcard_sym.yaml  runcard_ttZ.yaml  runcard_ttZ_higgs.yaml  tutorial.ipynb  tutorial.yaml
(+1115 files in other folders)
