[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Smefit"
version = "0.1.0"
description = "Standard Model Effective Field Theory Fitter"
authors = [
    "Tommaso Giani <tgiani@nikhef.nl>",
    "Giacomo Magni <gmagni@nikhef.nl>",
    "Jaco Ter Hoeve <i.j.ter.hoeve@vu.nl>",
]
#license = "LICENSE"
readme = "README.md"
keywords = ["packaging", "dependency", "infer", "pyproject.toml"]
classifiers=[
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]

# Requirements
[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rich="^11.2.0"
matplotlib="^3.5.1"
pyyaml="^5.3.0"
numpy="^1.21.5"
pandas="^1.4.1"
# openmpi="4.1.3"
mpi4py="3.1.3"
pymultinest="2.11"
PyPDF2="^1.27.12"
scipy="^1.8.0"
click="^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^2.12.1"
ipython = "^8.4.0"
pdbpp = "^0.10.3"


[tool.pytest.ini_options]
testpaths = ['tests/']
python_files = ['test_*.py', 'benchmark_*.py']
python_classes = ['Test*', 'Benchmark*']
python_functions = ['test_*', 'benchmark_*']
addopts = [
  '--cov=smefit',
  '--cov-report=html',
  '--cov-report=xml',
  '--strict-markers',
]

[tool.poetry.scripts]
smefit = "smefit.cli:base_command"
