[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smefit"
version = "0.0.0"
description = "Standard Model Effective Field Theory Fitter"
authors = [
    "Tommaso Giani <tgiani@nikhef.nl>",
    "Giacomo Magni <gmagni@nikhef.nl>",
    "Jaco Ter Hoeve <i.j.ter.hoeve@vu.nl>",
]
license = "LICENSE"
readme = "README.md"
keywords = ["packaging", "dependency", "infer", "pyproject.toml"]
homepage = "https://lhcfitnikhef.github.io/smefit_release/"
repository = "https://github.com/LHCfitNikhef/smefit_release"
classifiers=[
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]

# Requirements
[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rich="^11.2.0"
matplotlib="^3.5.1"
pyyaml="^6.0"
numpy="^1.21.5"
pandas="^1.4.1"
ultranest="^3.5.7"
scipy="^1.8.0"
click="^8.1.3"
cma="^3.2.2"
seaborn="^0.11.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.1"
nbsphinx = "^0.8.8"
ipykernel = "^6.13.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "4.0.0"
pytest-env = "^0.6.2"
pylint = "^2.12.2"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ipython = "^8.0"
asv = "^0.4.2"
virtualenv = "^20.13.2"
devtools = "^0.10.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/smefit/version.py"]


[tool.pytest.ini_options]
testpaths = ['tests/']
python_files = ['test_*.py', 'benchmark_*.py']
python_classes = ['Test*', 'Benchmark*']
python_functions = ['test_*', 'benchmark_*']
addopts = [
  '--cov=smefit',
  '--cov-report=html',
  '--cov-report=xml',
  '--strict-markers',
]

[tool.poetry.scripts]
smefit = "smefit.cli:base_command"
